--- a/css/global.css
+++ b/css/global.css
@@ -3,7 +3,6 @@ body {
   position: relative;
   height: 100%;
   font-family: 'Alegreya', sans-serif;
-  background-color:#2b3035;
 }
 .wrap{
     overflow: hidden;
@@ -103,11 +102,11 @@ body {
 
 .examples__title{
     text-align: center;
-    padding: 5px;
     font-weight: normal;
     font-size: 1.83vw;
     color: white;
-    background-color:#2b3035;
+    background-color:#2b3035;;
+    width: 100%;
 }
 .examples{
     display: flex;
